modify : ChatRoomDTO 수정